--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 server:
-  port: ${server-port:9000}
+  port: ${server-port}
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/${database-name:project_test}
-    username: ${database-username:root}
-    password: ${database-password:password}
+    url: ${database-url}/${database-name}
+    username: ${database-username}
+    password: ${database-password}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    show-sql: true
+    show-sql: ${show-sql}
